--- a/package.json
+++ b/package.json
@@ -12,25 +12,32 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/slider": "^4.5.5",
-    "@react-navigation/native": "^7.0.7",
+    "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.1.8",
+    "@react-navigation/stack": "^7.1.1",
     "@reduxjs/toolkit": "^2.3.0",
+    "@sparkfabrik/react-native-idfa-aaid": "^1.2.0",
+    "@vladikstyle/react-native-apple-ads-attribution": "^1.0.4",
     "date-fns": "^4.1.0",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-native": "0.76.3",
-    "react-native-device-info": "^14.0.1",
-    "react-native-gesture-handler": "^2.21.2",
+    "react-native-appsflyer": "^6.15.3",
+    "react-native-device-info": "^14.0.2",
+    "react-native-gesture-handler": "^2.22.1",
     "react-native-heroicons": "^4.0.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-onesignal": "^5.2.8",
     "react-native-restart": "^0.0.27",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^4.3.0",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-screens": "^4.6.0",
     "react-native-share": "^12.0.3",
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.9.0",
+    "react-native-tracking-transparency": "^0.1.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-view-shot": "^4.0.2",
+    "react-native-webview": "^13.13.2",
     "react-redux": "^9.1.2",
     "tailwind-rn": "^4.2.0"
   },
