fix push notifaction and change build evrsion

--- a/ios/MindilBeachJourney/Info.plist
+++ b/ios/MindilBeachJourney/Info.plist
@@ -24,7 +24,7 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-    <key>NSAppTransportSecurity</key>
+	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
@@ -84,6 +84,10 @@
 		<string>InknutAntiqua-Regular.ttf</string>
 		<string>Inter_18pt-Bold.ttf</string>
 		<string>Inter_18pt-Light.ttf</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
